修复了速度显示错误

--- a/UserInterface/frmWK6500PUi.ui
+++ b/UserInterface/frmWK6500PUi.ui
@@ -466,7 +466,7 @@ Search</string>
        </font>
       </property>
       <property name="text">
-       <string>Fast</string>
+       <string>Maximum</string>
       </property>
      </widget>
     </widget>
